--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div id="profile">
 		<img src="img/profile.jpg" alt="User" />
 		<h1>Nuwan Sameera Alawatta</h1>
-		<p>Undergraduate at University of Kelaniya<br/><small>BSc(Hons) Sotware Engineering | 2021</small></p>
+		<p>Undergraduate at University of Kelaniya<br/><small>BSc(Hons) Software Engineering | 2021</small></p>
 		<div class="social-icons">
 			<a class="link" href="https://facebook.com/nsa94" target="_blank">
 				<i class="fa fa-facebook-square fa-2x social"></i>
