--- a/index.html
+++ b/index.html
@@ -1,58 +1,80 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<link rel="mask-icon" href="https://assets-cdn.github.com/pinned-octocat.svg" color="#000000">
-	<link rel="icon" type="image/x-icon" class="js-site-favicon" href="https://assets-cdn.github.com/favicon.ico">
-	<title>Nuwan Sameera Alawatta</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,900,500' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="css/default.css">
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description"
+    content="Nuwan Sameera Alawatta is a Software Engineering Undergraduate in University of Kelaniya.">
+  <meta name="author" content="Nuwan Alawatta">
+
+  <title>Nuwan Alawatta</title>
+
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Oswald:100,400,500,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+  <link href="css/main.css" rel="stylesheet">
+
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js'></script>
+  <script>
+    new WOW().init();
+  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
+
+  <script src="js/app.js"></script>
+
 </head>
-<body>
-	<!-- <div class="center-sq">
-			<div class="profile-pic">
-				<img src="img/profile.jpg">
-			</div>
-			<div class="profile-details">
-				<span>Name</span> : Nuwan Sameera Alawatta<br/>
-				<span>Mobile</span> : 0757871494<br/>
-				<span>Email</span> : hello@nuwan.pw<br/>
-			</div>
-	</div> -->
 
+<body class="" ng-app="myCV">
 
-<div id="card">
-	<div id="blur">
-		<div id="color"></div>
-	</div>
-	<div id="profile">
-		<img src="img/profile.jpg" alt="User" />
-		<h1>Nuwan Sameera Alawatta</h1>
-		<p>Undergraduate at University of Kelaniya<br/><small>BSc(Hons) Software Engineering | 2021</small></p>
-		<div class="social-icons">
-			<a class="link" href="https://facebook.com/nsa94" target="_blank">
-				<i class="fa fa-facebook-square fa-2x social"></i>
-			</a>
-			<a class="link" href="https://linkedin.com/in/nsa94/" target="_blank">
-				<i class="fa fa-linkedin-square fa-2x social"></i>
-			</a>
-			<a class="link" href="https://github.com/Nuwan94" target="_blank">
-				<i class="fa fa-github fa-2x social"></i>
-			</a>
-			<a class="link" href="https://stackoverflow.com/users/3125964/nuwan94" target="_blank">
-				<i class="fa fa-stack-overflow fa-2x social"></i>
-			</a>
+  <div class="container text-center">
+    <div class="row m-3">
+      <div class="col-md-4 mx-auto">
+        <h2 class="title wow bounceInDown">Hello, I'm <span id="js-rotating">Nuwan</span></h2>
+        <img src="img/profile_img.jpg" alt="Nuwan's Photo" class="mt-2 profile wow bounceIn">
+      </div>
+    </div>
+    <div class="row m-3">
+      <div class="col-md-6 mx-auto social-links wow bounceInRight">
+        <a href='https://www.facebook.com/nsa94' target="_blank"><i class='fa fa-facebook-square wow bounceIn'></i></a>
+        <a href='https://twitter.com/_nsa94' target="_blank"><i class='fa fa-twitter-square wow bounceIn'></i></a>
+        <a href='https://linkedin.com/in/nsa94/' target="_blank"><i class='fa fa-linkedin-square wow bounceIn'></i></a>
+        <a href='https://github.com/Nuwan94' target="_blank"><i class='fa fa-github wow bounceIn'></i></a>
+        <a href='https://stackoverflow.com/users/3125964/nuwan94' target="_blank"><i class='fa fa-stack-overflow wow bounceIn'></i></a>
+      </div>
+    </div>
 
+    <div class="row">
+      <div class="col-md-6 mx-auto menu mb-3">
+        <ul class="nav justify-content-center wow bounceInLeft">
+          <li class="nav-item">
+            <a class="nav-link" href="#!">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#!resume">Resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#!projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#!contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
 
-		</div>
-	</div>
-</div>
+    <div class="row">
+      <div class="col-md-8 mx-auto">
+        <div class="ng-view wow bounceIn" data-wow-delay="100ms"></div>
+      </div>
+    </div>
 
+  </div>
 
-<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-<script type="text/javascript" src='js/basic.js'></script>
 </body>
+
 </html>
