--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,7 @@
 <div class="row">
-    <h3 class="m-3 col-md-12 wow fadeInUp">Profile</h3>
+    <h3 class="m-3 col-md-12">Profile</h3>
     <div class="col-md-8 mx-auto">
-        <table class="table wow fadeInUp">
+        <table class="table">
             <tr>
                 <td>Email</td>
                 <td><a href="mailto:hello@nuwan.dev">hello@nuwan.dev</a></td>
