--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,36 @@
 <div class="row">
     <h3 class="m-3 col-md-12">Contact</h3>
+    <div class="col-md-8 mx-auto">
+        <form class="form-horizontal" action="" method="post">
+            <fieldset>
+                <div class="form-group">
+                    <div class="col-md-12">
+                        <input id="name" name="name" type="text" placeholder="Your name" class="form-control">
+                    </div>
+                </div>
+
+                <!-- Email input-->
+                <div class="form-group">
+                    <div class="col-md-12">
+                        <input id="email" name="email" type="text" placeholder="Your email" class="form-control">
+                    </div>
+                </div>
+
+                <!-- Message body -->
+                <div class="form-group">
+                    <div class="col-md-12">
+                        <textarea class="form-control" id="message" name="message"
+                            placeholder="Please enter your message here..." rows="5"></textarea>
+                    </div>
+                </div>
+
+                <!-- Form actions -->
+                <div class="form-group">
+                    <div class="col-md-12 text-right">
+                        <button type="submit" class="btn btn-primary btn-block btn-lg">Submit</button>
+                    </div>
+                </div>
+            </fieldset>
+        </form>
+    </div>
 </div>
