--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
-
+  <script src="vendor/jquery/jquery.min.js"></script>
   <script src="js/app.js"></script>
 
 </head>
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="row m-3">
-      <div class="col-md-6 mx-auto social-links wow bounceInRight">
+      <div class="col-md-6 mx-auto social-links wow bounceIn">
         <a href='https://www.facebook.com/nsa94' target="_blank"><i class='fa fa-facebook-square wow bounceIn'></i></a>
         <a href='https://twitter.com/_nsa94' target="_blank"><i class='fa fa-twitter-square wow bounceIn'></i></a>
         <a href='https://linkedin.com/in/nsa94/' target="_blank"><i class='fa fa-linkedin-square wow bounceIn'></i></a>
@@ -57,7 +57,7 @@
 
     <div class="row">
       <div class="col-md-6 mx-auto menu mb-3">
-        <ul class="nav justify-content-center wow bounceInLeft">
+        <ul class="nav justify-content-center wow bounceIn">
           <li class="nav-item">
             <a class="nav-link" href="#!">About</a>
           </li>
@@ -76,7 +76,7 @@
 
     <div class="row">
       <div class="col-md-8 mx-auto">
-        <div class="ng-view" data-wow-delay="100ms"></div>
+        <div class="ng-view wow fadeIn"></div>
       </div>
     </div>
 
