--- a/profile.html
+++ b/profile.html
@@ -14,6 +14,10 @@
                 <td></td>
                 <td><a href="tel:+94757871494">+94 75 787 1494</a></td>
             </tr>
+            <tr>
+                <td>Address</td>
+                <td><a>Magalegoda, Veyangoda.</a></td>
+            </tr>
         </table>
     </div>
 </div>
