--- a/profile.html
+++ b/profile.html
@@ -8,15 +8,17 @@
             </tr>
             <tr>
                 <td>Mobile</td>
-                <td><a href="tel:+94717871494">+94 71 787 1494</a></td>
+                <td><a href="tel:+94717871494">+94 71 787 1494</a><br>
+                    <a href="tel:+94757871494">+94 75 787 1494</a>
+                </td>
             </tr>
             <tr>
-                <td></td>
-                <td><a href="tel:+94757871494">+94 75 787 1494</a></td>
+                <td>DOB</td>
+                <td>1994 May 24</td>
             </tr>
             <tr>
                 <td>Address</td>
-                <td><a>Magalegoda, Veyangoda.</a></td>
+                <td>Magalegoda, Veyangoda.</td>
             </tr>
         </table>
     </div>
