--- a/resume.html
+++ b/resume.html
@@ -1,3 +1,6 @@
 <div class="row">
     <h3 class="m-3 col-md-12">Resume</h3>
+    <div class="col-md-12" style="width:100%; height:100vh; margin:0;">
+            <iframe src="https://docs.google.com/gview?url=https://nuwan94.github.io/cv/CV_Nuwan Alawatta.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    </div>
 </div>
