--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
                 </td>
             </tr>
             <tr>
-                <td>DOB</td>
+                <td>Date of Birth</td>
                 <td>1994 May 24</td>
             </tr>
             <tr>
