--- a/projects.html
+++ b/projects.html
@@ -3,23 +3,25 @@
 </div>
 <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
-<div class="row" ng-controller="projectCtrl">
+<div class="row" ng-controller="projectCtrl" ng-init="getProjects('config/apps.json')">
         <div class="col-md-8 mx-auto mb-3">
-                <button type="button" class="btn btn-light" ng-click="getProjects('config/apps.json')" >Apps</button>
-                <button type="button" class="btn btn-light" ng-click="getProjects('config/web.json')" >Webs</button>
-                <button type="button" class="btn btn-light" ng-click="getProjects('config/games.json')" >Games</button>
-                <button type="button" class="btn btn-light" ng-click="getProjects('config/designs.json')" >Designs</button>
-                <button type="button" class="btn btn-light" ng-click="getProjects('https://api.github.com/users/nuwan94/repos?page=1&per_page=100')" >OpenSource</button>
+                <button type="button" class="btn btn-light m-1" ng-click="getProjects('config/apps.json')" >Apps</button>
+                <button type="button" class="btn btn-light m-1" ng-click="getProjects('config/web.json')" >Webs</button>
+                <button type="button" class="btn btn-light m-1" ng-click="getProjects('config/games.json')" >Games</button>
+                <button type="button" class="btn btn-light m-1" ng-click="getProjects('config/designs.json')" >Designs</button>
+                <button type="button" class="btn btn-light m-1" ng-click="getProjects('https://api.github.com/users/nuwan94/repos?page=1&per_page=100')" >OpenSource</button>
             </div>
     <div class="col-md-8 mx-auto" ng-if="isLoaded">
         <i class="fa fa-3x fa-spinner fa-pulse"></i>
     </div>
-    <div class="m-3 project text-left  col-md-10 mx-auto wow bounceIn" ng-repeat="pro in projects">
-        <a class="float-left" ng-href="{{pro.html_url}}">
-            <h3>{{pro.name}}</h3>
-        </a>
-        <i class="devicon-{{ pro.language| langConvert }}-plain float-right" ></i>
-        <!-- <span class="badge float-right badge-success"></span> -->
+    <div class="p-3 project text-left wow fadeIn col-md-10 mx-auto" ng-repeat="pro in projects | orderBy: '-created_at'">
+        <h3 class="float-left wow fadeIn">{{pro.name}}</h3>
+        
+        <i class="devicon-{{ pro.language| langConvert }}-plain float-right wow bounceIn" data-wow-delay="100ms"></i>
         <p>{{pro.description}}</p>
+        <span ng-if="pro.created_at" class="float-right text-muted">{{pro.created_at | utcToLocal }}</span>
+        <a class="btn btn-primary m-1 mb-3 wow bounceIn"  data-wow-delay="200ms" ng-if="pro.html_url" ng-href="{{pro.html_url}}" target="_blank">SOURCE</a>
+        <a class="btn btn-success m-1 mb-3 wow bounceIn"  data-wow-delay="300ms" ng-if="pro.homepage" ng-href="{{pro.homepage}}" target="_blank">DEMO</a> 
+        
     </div>
 </div>
