--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Oswald:100,400,500,700" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <link href="css/main.css" rel="stylesheet">
@@ -49,12 +50,17 @@
     </div>
     <div class="row m-3">
       <div class="col-md-12 mx-auto social-links wow bounceIn" data-wow-delay="100ms">
-        <a href='https://www.facebook.com/nsa94' target="_blank"><i class='fa fa-facebook-square m-1 wow bounceIn'></i></a>
-        <a href='https://twitter.com/_nsa94' target="_blank"><i class='fa fa-twitter-square wow m-1 bounceIn'></i></a>
-        <a href='https://linkedin.com/in/nsa94/' target="_blank"><i class='fa fa-linkedin-square m-1 wow bounceIn'></i></a>
-        <a href='https://github.com/Nuwan94' target="_blank"><i class='fa fa-github m-1 wow bounceIn'></i></a>
+        <!-- <a href='https://www.facebook.com/nsa94' target="_blank"><i class='fab fa-facebook-square m-1 wow bounceIn'></i></a>
+        <a href='https://twitter.com/_nsa94' target="_blank"><i class='fab fa-twitter-square wow m-1 bounceIn'></i></a> -->
+        <a href='https://linkedin.com/in/nsa94/' target="_blank"><i class='fab fa-linkedin m-1 wow bounceIn'></i></a>
+        <a href='https://github.com/Nuwan94' target="_blank"><i class='fab fa-github m-1 wow bounceIn'></i></a>
+        <a href='https://gitlab.com/Nuwan94' target="_blank"><i class='fab fa-gitlab m-1 wow bounceIn'></i></a>
         <a href='https://stackoverflow.com/users/3125964/nuwan94' target="_blank"><i
-            class='fa fa-stack-overflow m-1 wow bounceIn'></i></a>
+            class='fab fa-stack-overflow m-1 wow bounceIn'></i></a>
+        <a href="https://medium.com/@nsa94"  target="_blank"><i class="fab fa-medium m-1 wow bounceIn"></i></a>
+        <a href="https://www.hackerrank.com/nsa94"  target="_blank"><i class="fab fa-hackerrank m-1 wow bounceIn"></i></a>
+        <a href="https://www.codepen.com/nsa94"  target="_blank"><i class="fab fa-codepen m-1 wow bounceIn"></i></a>
+         
       </div>
     </div>
 
