--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,39 @@
 <div class="row">
     <h3 class="m-3 col-md-12">Contact</h3>
     <div class="col-md-8 mx-auto">
-        <form class="form-horizontal" action="" method="post">
+
+        <div class="row m-3">
+
+            <div class="col-md-3">
+                <a href="https://wa.me/94757871494" class="contact-icon-link wow bounceIn"
+                    style="background-color: #25d366;" target="_blank">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+            </div>
+
+            <div class="col-md-3">
+                <a href="https://m.me/nsa94" class="contact-icon-link wow bounceIn" style="background-color: #0084ff;"
+                    target="_blank">
+                    <i class="fab fa-facebook-messenger"></i>
+                </a>
+            </div>
+
+            <div class="col-md-3">
+                <a href="https://discord.gg/Vwa34NH" class="contact-icon-link wow bounceIn" style="background-color: #7289da;" target="_blank">
+                    <i class="fab fa-discord"></i>
+                </a>
+            </div>
+
+            <div class="col-md-3">
+                <a href="skype:live:nuwanalawatta" class="contact-icon-link wow bounceIn"
+                    style="background-color: #00aff0;" target="_blank">
+                    <i class="fab fa-skype"></i>
+                </a>
+            </div>
+
+        </div>
+
+        <!-- <form class="form-horizontal" action="" method="post">
             <fieldset>
                 <div class="form-group">
                     <div class="col-md-12">
@@ -9,14 +41,12 @@
                     </div>
                 </div>
 
-                <!-- Email input-->
                 <div class="form-group">
                     <div class="col-md-12">
                         <input id="email" name="email" type="text" placeholder="Your email" class="form-control">
                     </div>
                 </div>
 
-                <!-- Message body -->
                 <div class="form-group">
                     <div class="col-md-12">
                         <textarea class="form-control" id="message" name="message"
@@ -24,13 +54,13 @@
                     </div>
                 </div>
 
-                <!-- Form actions -->
                 <div class="form-group">
                     <div class="col-md-12 text-right">
                         <button type="submit" class="btn btn-primary btn-block btn-lg">Submit</button>
                     </div>
                 </div>
             </fieldset>
-        </form>
+        </form> -->
+
     </div>
 </div>
