--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,35 @@
-<div class="row">
+<div class="row wow fadeIn" ng-controller="resumeCtrl" ng-init="getResume('config/resume.json');">
     <h3 class="m-3 col-md-12">Resume</h3>
-    <div class="col-md-12" style="width:100%; height:100vh; margin:0;">
-            <iframe src="https://docs.google.com/gview?url=https://nuwan94.github.io/cv/CV_Nuwan Alawatta.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <div class="col-md-8 mx-auto" ng-if="isNotLoaded">
+        <i class="fa fa-3x fa-spinner fa-pulse"></i>
+    </div>
+
+    <div class="col-md-12 text-left" ng-if="!isNotLoaded">
+        <!-- <iframe src="https://docs.google.com/gview?url=https://nuwan94.github.io/cv/CV_Nuwan Alawatta.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe> -->
+        <div class="col-md-8 mx-auto mb-3 text-center">
+            <button type="button" class="btn btn-light m-1 wow bounceIn" ng-click="showWork()">Work</button>
+            <button type="button" class="btn btn-light m-1 wow bounceIn" ng-click="showEdu()">Education</button>
+            <button type="button" class="btn btn-light m-1 wow bounceIn" ng-click="showComm()">Communities</button>
+            <button type="button" class="btn btn-light m-1 wow bounceIn" ng-click="showCont()">Contests</button>
+        </div>
+
+        <h3 class="mt-5 mb-5 text-center">{{resu.title}}</h3>
+
+        <div class="mt-3 mb-3 resume-item text-left wow fadeIn col-md-10 mx-auto" ng-repeat="r in resu">
+            <h4 class="wow fadeInUp">{{r.head}}
+                <a class="float-right small text-success" ng-if="r.link" target="_blank" href="{{r.link}}"><i
+                        class="fa fa-link"></i></a>
+            </h4>
+            <h6>{{r.subhead}} <span class="text-warning small">({{r.time}})</span></h6>
+            <p class="text-justify text-grey clear">{{r.desc}}</p>
+            <p>
+                <ul>
+                    <li class="text-grey" ng-repeat="l in r.list">{{l}}</li>
+                </ul>
+            </p>
+            <p><span class="badge badge-dark mr-1" data-wow-delay="300ms" ng-repeat="t in r.tags">{{t}}</span></p>
+            <a class="btn btn-sm btn-primary mb-3" target="_blank" ng-if="r.cert_link" href="{{r.cert_link}}">View Certificate</a>
+        </div>
+
     </div>
 </div>
