--- a/about.html
+++ b/about.html
@@ -38,25 +38,19 @@
                         <td>Egyptian Brackets</td>
                     </tr>
                     <tr>
-                        <td>Spacing</td>
+                        <td>Indentation Style</td>
                         <td>Tabs</td>
-                    </tr>
-                    <tr>
-                        <td>Clean Code</td>
-                        <td>KISS, DRY, SOLID</td>
                     </tr>
                 </table>
             </div>
-        </div>
-        <div class="row text-left">
-            <div class="col-md-6">
+            <div class="col-md-10 mx-auto">
                 English <small>(Professional)</small>
                 <div class="progress mb-3">
                     <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
                         aria-valuemax="100" style="width: 60%"></div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-10 mx-auto">
                 Sinhala <small>(Native)</small>
                 <div class="progress mb-3">
                     <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
@@ -66,7 +60,7 @@
         </div>
     </div>
 
-    <div class="col-md-8 mx-auto mt-3">
+    <div class="col-md-10 mx-auto mt-3">
         <p class="social-links col">
 
             <a href='https://www.facebook.com/nsa94' target="_blank" data-toggle="tooltip" title="nsa94"><i
