--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,14 @@
 
             <div class="col-md-3">
                 <a href="https://wa.me/94757871494" class="contact-icon-link wow bounceIn"
-                    style="background-color: #25d366;" target="_blank">
+                    style="background-color: #25d366;" target="_blank" data-toggle="tooltip" title="+94757871494">
                     <i class="fab fa-whatsapp"></i>
                 </a>
             </div>
 
             <div class="col-md-3">
                 <a href="https://m.me/nsa94" class="contact-icon-link wow bounceIn" style="background-color: #0084ff;"
-                    target="_blank">
+                    target="_blank" data-toggle="tooltip" title="messenger/nsa94">
                     <i class="fab fa-facebook-messenger"></i>
                 </a>
             </div>
