--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+
   <meta name="description"
     content="Nuwan Sameera Alawatta is a Software Engineering Undergraduate in University of Kelaniya.">
   <meta name="author" content="Nuwan Alawatta">
+  <meta name="msapplication-TileColor" content="#141A32">
+  <meta name="theme-color" content="#141A32">
 
   <title>Nuwan Alawatta :: Software Developer :: Personal Website</title>
 
@@ -32,11 +35,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script>
-    jQuery(document).ready(function () {
-      jQuery('[data-toggle="tooltip"]').tooltip();
-    });
-  </script>
   <script src="js/app.js"></script>
 
 </head>
@@ -83,19 +81,13 @@
           </div>
         </div>
       </div>
+
       <div class="col-md-8">
-        <div class="ng-view"></div>
+        <div class="ng-view">
+        </div>
       </div>
+
     </div>
-
-
-
-    <!-- <div class="row">
-      <div class="col-md-8 mx-auto">
-        
-      </div>
-    </div> -->
-
   </div>
 
 </body>
