--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,4 @@
-<div class="row wow fadeIn" ng-controller="resumeCtrl" ng-init="getResume('config/resume.json');">
+<div class="row wow fadeIn resume" ng-controller="resumeCtrl" ng-init="getResume('config/resume.json');">
     <h3 class="m-3 col-md-12">Resume</h3>
     <div class="col-md-8 mx-auto" ng-if="isNotLoaded">
         <i class="fa fa-3x fa-spinner fa-pulse"></i>
@@ -20,15 +20,27 @@
                 <a class="float-right small text-success" ng-if="r.link" target="_blank" href="{{r.link}}"><i
                         class="fa fa-link"></i></a>
             </h4>
-            <h6>{{r.subhead}} <span class="text-warning small">({{r.time}})</span></h6>
-            <p class="text-justify text-grey clear">{{r.desc}}</p>
-            <p>
+            <h6 ng-if="r.subhead">{{r.subhead}} <span class="text-warning small">({{r.time}})</span></h6>
+            <p ng-if="r.list">
                 <ul>
                     <li class="text-grey" ng-repeat="l in r.list">{{l}}</li>
                 </ul>
             </p>
-            <p><span class="badge badge-dark mr-1" data-wow-delay="300ms" ng-repeat="t in r.tags">{{t}}</span></p>
-            <a class="btn btn-sm btn-primary mb-3" target="_blank" ng-if="r.cert_link" href="{{r.cert_link}}">View Certificate</a>
+            <table class="table table-striped" ng-if="r.results" ng-repeat="table in r.results">
+                <tr>
+                    <th class="border-0 text-success"  ng-if="table.title" colspan="2">{{table.title}}</th>
+                </tr>
+                <tr ng-repeat="row in table.arr">
+                    <td class="border-0" ng-repeat="col in row">
+                        {{col}}
+                    </td>
+                </tr>
+            </table>
+            <p ng-if="r.desc" class="text-justify text-grey clear">{{r.desc}}</p>
+
+            <p ng-if="r.tags"><span class="badge badge-dark mr-1" data-wow-delay="300ms" ng-repeat="t in r.tags">{{t}}</span></p>
+            <a class="btn btn-sm btn-primary mb-3" target="_blank" ng-if="r.cert_link" href="{{r.cert_link}}">View
+                Certificate</a>
         </div>
 
     </div>
