--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,30 @@
     <h3 class="m-3 col-md-12">Contact</h3>
     <div class="col-md-8 mx-auto">
 
-        <div class="row m-3">
+        <div class="row m-3 text-center">
+
+            <div class="col-md-6">
+                <a href="tel:+94757871494" class="bg-dark contact-icon-link wow bounceIn">
+                    <i class="fa fa-phone"></i>
+                </a>
+            </div>
+
+            <div class="col-md-6">
+                <a href="mailto:nuwansalawatta@gmail.com" class="bg-danger contact-icon-link wow bounceIn">
+                    <i class="fa fa-envelope"></i>
+                </a>
+            </div>
+
+
+        </div>
+        <div class="row m-3 text-center">
+
+            <div class="col-md-3">
+                <a href="skype:live:nuwanalawatta" class="contact-icon-link wow bounceIn"
+                    style="background-color: #00aff0;" target="_blank">
+                    <i class="fab fa-skype"></i>
+                </a>
+            </div>
 
             <div class="col-md-3">
                 <a href="https://wa.me/94757871494" class="contact-icon-link wow bounceIn"
@@ -19,48 +42,13 @@
             </div>
 
             <div class="col-md-3">
-                <a href="https://discord.gg/Vwa34NH" class="contact-icon-link wow bounceIn" style="background-color: #7289da;" target="_blank">
+                <a href="https://discord.gg/aWkvfur" class="contact-icon-link wow bounceIn"
+                    style="background-color: #7289da;" target="_blank">
                     <i class="fab fa-discord"></i>
                 </a>
             </div>
 
-            <div class="col-md-3">
-                <a href="skype:live:nuwanalawatta" class="contact-icon-link wow bounceIn"
-                    style="background-color: #00aff0;" target="_blank">
-                    <i class="fab fa-skype"></i>
-                </a>
-            </div>
-
         </div>
-
-        <!-- <form class="form-horizontal" action="" method="post">
-            <fieldset>
-                <div class="form-group">
-                    <div class="col-md-12">
-                        <input id="name" name="name" type="text" placeholder="Your name" class="form-control">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-md-12">
-                        <input id="email" name="email" type="text" placeholder="Your email" class="form-control">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-md-12">
-                        <textarea class="form-control" id="message" name="message"
-                            placeholder="Please enter your message here..." rows="5"></textarea>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-md-12 text-right">
-                        <button type="submit" class="btn btn-primary btn-block btn-lg">Submit</button>
-                    </div>
-                </div>
-            </fieldset>
-        </form> -->
 
     </div>
 </div>
