--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="js/app.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135973685-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-135973685-2');
+  </script>
+
 
 </head>
 
@@ -45,41 +57,49 @@
 
     <div class="row mt-2">
       <div class="col-md-4">
-        <div class="row m-3">
-          <div class="col-md-12 mx-auto">
-            <h2 class="title wow bounceInDown" data-wow-delay="50ms">Hello, I'm <span id="js-rotating">Nuwan</span></h2>
-            <img src="img/profile_img.jpg" alt="Nuwan's Photo" class="mt-2 profile wow bounceIn">
-          </div>
-        </div>
 
-        <div class="row m-3">
+        <div class="sticky">
+          <div class="row m-3">
+            <div class="col-md-12 mx-auto">
+              <div>
+                <h2 class="title wow bounceInDown" data-wow-delay="50ms">Hello, I'm <span id="js-rotating">Nuwan</span>
+                </h2>
+                <img src="img/profile_img.jpg" alt="Nuwan's Photo" class="mt-2 profile wow bounceIn">
+              </div>
+            </div>
+          </div>
+
+          <!-- <div class="row m-3">
           <div class="col-md-12 mx-auto social-links wow bounceIn" data-wow-delay="100ms">
+          </div>
+        </div> -->
 
-
+          <div class="row">
+            <div class="col-md-12 mx-auto menu mb-3">
+              <ul class="nav justify-content-center">
+                <li class="nav-item wow bounceIn" data-wow-delay="250ms">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item wow bounceIn" data-wow-delay="300ms">
+                  <a class="nav-link" href="#stats">Stats</a>
+                </li>
+                <li class="nav-item wow bounceIn" data-wow-delay="300ms">
+                  <a class="nav-link" href="#resume">Resume</a>
+                </li>
+                <li class="nav-item wow bounceIn" data-wow-delay="350ms">
+                  <a class="nav-link" href="#projects">Projects</a>
+                </li>
+                <li class="nav-item wow bounceIn" data-wow-delay="400ms">
+                  <a class="nav-link" href="#contact">Contact</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-md-12 mx-auto menu mb-3">
-            <ul class="nav justify-content-center">
-              <li class="nav-item wow bounceIn" data-wow-delay="250ms">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item wow bounceIn d-none d-lg-block" data-wow-delay="300ms">
-                <a class="nav-link" href="#stats">Stats</a>
-              </li>
-              <li class="nav-item wow bounceIn" data-wow-delay="300ms">
-                <a class="nav-link" href="#resume">Resume</a>
-              </li>
-              <li class="nav-item wow bounceIn" data-wow-delay="350ms">
-                <a class="nav-link" href="#projects">Projects</a>
-              </li>
-              <li class="nav-item wow bounceIn" data-wow-delay="400ms">
-                <a class="nav-link" href="#contact">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+
+
+
       </div>
 
       <div class="col-md-8">
