--- a/contact.html
+++ b/contact.html
@@ -4,49 +4,61 @@
 
         <div class="row m-3 text-center">
 
-            <div class="col-md-6">
+            <div class="col-md-6" title="Mobile">
                 <a href="tel:+94757871494" class="bg-dark contact-icon-link wow bounceIn">
                     <i class="fa fa-phone"></i>
                 </a>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-6" title="Email">
                 <a href="mailto:nuwansalawatta@gmail.com" class="bg-danger contact-icon-link wow bounceIn">
                     <i class="fa fa-envelope"></i>
                 </a>
             </div>
 
-
         </div>
         <div class="row m-3 text-center">
 
-            <div class="col-md-3">
+            <div class="col-md-4" title="Skype">
                 <a href="skype:live:nuwanalawatta" class="contact-icon-link wow bounceIn"
                     style="background-color: #00aff0;" target="_blank">
                     <i class="fab fa-skype"></i>
                 </a>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-4" title="Whatsapp">
                 <a href="https://wa.me/94757871494" class="contact-icon-link wow bounceIn"
                     style="background-color: #25d366;" target="_blank" data-toggle="tooltip" title="+94757871494">
                     <i class="fab fa-whatsapp"></i>
                 </a>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-4" title="Messenger">
                 <a href="https://m.me/nsa94" class="contact-icon-link wow bounceIn" style="background-color: #0084ff;"
                     target="_blank" data-toggle="tooltip" title="messenger/nsa94">
                     <i class="fab fa-facebook-messenger"></i>
                 </a>
             </div>
 
-            <div class="col-md-3">
+        </div>
+        <div class="row m-3 text-center">
+                <div class="col-md-2 d-none d-md-block"></div>
+
+            <div class="col-md-4" title="Telegram">
+                <a href="https://t.me/nuwan94" class="contact-icon-link wow bounceIn"
+                    style="background-color: #0088cc;" target="_blank">
+                    <i class="fab fa-telegram"></i>
+                </a>
+            </div>
+
+            <div class="col-md-4" title="Discord">
                 <a href="https://discord.gg/aWkvfur" class="contact-icon-link wow bounceIn"
                     style="background-color: #7289da;" target="_blank">
                     <i class="fab fa-discord"></i>
                 </a>
             </div>
+
+            <div class="col-md-2 d-none d-md-block"></div>
 
         </div>
 
