--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
             <a href='https://twitter.com/_nsa94' target="_blank" data-toggle="tooltip" title="_nsa94"><i
                     class='fab fa-twitter wow m-1 bounceIn'></i></a>
 
-            <a href='https://linkedin.com/in/nsa94/' target="_blank" data-toggle="tooltip" title="nsa94"><i
+            <a href='https://lk.linkedin.com/in/nsa94' target="_blank" data-toggle="tooltip" title="nsa94"><i
                     class='fab fa-linkedin m-1 wow bounceIn'></i></a>
 
             <a href='https://github.com/nuwan94' target="_blank" data-toggle="tooltip" title="nuwan94"><i
@@ -87,7 +87,7 @@
             <a href="https://www.hackerrank.com/nsa94" target="_blank" data-toggle="tooltip" title="nsa94"><i
                     class="fab fa-hackerrank m-1 wow bounceIn"></i></a>
 
-            <a href="https://www.codepen.com/nsa94" target="_blank" data-toggle="tooltip" title="nsa94"><i
+            <a href="https://www.codepen.io/nsa94" target="_blank" data-toggle="tooltip" title="nsa94"><i
                     class="fab fa-codepen m-1 wow bounceIn"></i></a>
 
             <a href="https://www.freecodecamp.org/nuwan94" target="_blank" data-toggle="tooltip" title="nuwan94"><i
